--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,617 +1,230 @@
-@font-face {
-	font-family: "Muli";
-	src: url("../fonts/Muli-Regular.ttf"), url("../fonts/Muli-Regular.woff");
-	font-weight: 400;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: "Muli";
-	src: url("../fonts/Muli-Bold.ttf"), url("../fonts/Muli-ExtraBold.woff");
-	font-weight: 800;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: "Muli";
-	src: url("../fonts/Muli-Italic.ttf");
-	font-weight: 400;
-	font-display: swap;
-	font-style: italic;
-}
-
-@font-face {
-	font-family: "Muli";
-	src: url("../fonts/Muli-BoldItalic.ttf"), url("../fonts/Muli-Semi-BoldItalic.ttf");
-	font-weight: 800;
-	font-display: swap;
-}
-
-body {
-	font-family: "Muli";
-	color: #fff;
-	font-size: 18px;
-	max-width: 1920px;
-}
-
 .header {
-	background-image: url("../images/header_bg.jpg");
-	background-repeat: no-repeat;
-	background-size: cover;
-	min-height: 100vh;
-	min-width: 100vh;
 }
-
 .header__top {
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	padding-left: 61px;
-	padding-top: 71px;
-	padding-bottom: 70px;
-	padding-right: 100px;
 }
-
 .header__menu {
 }
-
-.header__logo {
-	padding-right: 163px;
-}
-
-.header__personal {
-}
-
-.header__social {
-}
-
-.header__content {
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-	flex-wrap: wrap;
-	align-items: center;
-}
-
-.header__btn {
-}
-
-.header__title {
-}
-
 .menu {
-	display: flex;
-	justify-content: center;
-	align-items: center;
 }
-
 .menu__list {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	flex-wrap: wrap;
 }
-
-.menu__item + .menu__item {
-	margin-left: 32px;
+.menu__item {
 }
-
 .menu__link {
-	font-family: Muli;
-	font-size: 16px;
-	line-height: 40px;
-	font-weight: 700;
-	text-transform: uppercase;
-	letter-spacing: 0.02em;
-	color: #fff;
 }
-
 .logo {
 }
-
+.header__logo {
+}
 .logo__img {
 }
-
+.header__personal {
+}
 .personal {
-	display: flex;
 }
-
 .personal__list {
-	display: flex;
-	justify-content: space-between;
-	flex-wrap: wrap;
 }
-
 .personal__item {
-}
-.personal__item + .personal__item {
-	margin-left: 45px;
 }
 .personal__link {
 }
-
 .personal__icon {
 }
-
 .personal__link--cart {
 }
-
 .personal__count {
-	font-family: Muli;
-	font-size: 10px;
-	line-height: 40px;
-	font-weight: 400;
-	text-transform: uppercase;
-	letter-spacing: 0.02em;
-	color: #000;
 }
-
+.header__social {
+}
 .social {
-	display: flex;
-	justify-content: space-between;
-	flex-wrap: wrap;
 }
-
 .social__list {
-	display: flex;
-	justify-content: space-between;
-	flex-wrap: wrap;
 }
-
 .social__item {
 }
-.social__item + .social__item {
-	margin-left: 5px;
-}
-
 .social__link {
 }
-
 .social__icon {
 }
-
+.header__content {
+}
+.header__btn {
+}
 .btn {
-	padding: 25px 125px 20px 40px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	border-radius: 35px;
-	font-family: Muli;
-	font-size: 24px;
-	line-height: 40px;
-	font-weight: 800;
-	letter-spacing: -0.02em;
-	color: #fff;
-	border: none;
 }
-
 .btn--bg {
-	background-color: #0aa566;
 }
-
+.header__title {
+}
 .title {
 }
-
 .smoothies {
 }
-
 .smoothies__title {
-	font-family: Muli;
-	font-size: 50px;
-	line-height: 40px;
-	font-weight: 800;
-	letter-spacing: -0.02em;
-	color: #f7ae3b;
 }
-
 .smoothies__text {
-	font-family: Muli;
-	font-size: 18px;
-	line-height: 35px;
-	font-weight: 400;
-	color: #1e1e1e;
 }
-
 .smoothies__cards {
 }
-
-.container {
-}
-
 .cards {
-	width: 1020px;
-	height: 100vh;
-	display: flex;
-	flex-wrap: wrap;
-	align-items: center;
-	align-content: center;
 }
-
 .cards__item {
-	width: 240px;
-	height: 200px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 }
-
 .cards__icon {
 }
-
 .cards__desc {
-	font-family: Muli;
-	font-size: 25px;
-	line-height: 40px;
-	font-weight: 800;
-	letter-spacing: -0.02em;
-	color: #f2612d;
 }
-
 .about {
-	background-color: #148071;
 }
-
 .about__img {
 }
-
 .about__wrapper {
 }
-
 .about__title {
-	font-family: Muli;
-	font-size: 55px;
-	line-height: 60px;
-	font-weight: 800;
-	letter-spacing: -0.02em;
-	color: #fff;
 }
-
 .about__title--green {
-	color: #cae941;
 }
-
 .about__list {
-	list-style-image: url(../images/li.png);
 }
-
 .about__item {
-	font-family: Muli;
-	font-size: 21px;
-	line-height: 22px;
-	font-weight: 400;
-	color: #fff;
 }
-
 .about__item--bold {
-	font-weight: 800;
 }
-
 .about__btn {
-	width: 382px;
-	height: 63px;
-	border: 2px solid #f8b231;
-	border-radius: 30px;
-	font-family: Muli;
-	font-size: 21px;
-	line-height: 22px;
-	font-weight: 800;
-	color: #fff;
 }
-
+.btn--border-white {
+}
 .about__link {
 }
-
 .products {
-	width: 100%;
-	height: 100vh;
-	display: flex;
-	justify-content: space-between;
 }
-
 .products__item {
 }
-
 .product {
 }
-
 .product__label {
 }
-
 .product__subtitle {
 }
-
 .product__button {
-	width: 207px;
-	height: 63px;
-	border: 2px solid #ffffff;
-	border-radius: 30px;
 }
-
 .product__item {
 }
-
 .story {
 }
-
 .story__inner {
 }
-
 .story__box {
 }
-
 .story__title {
-	font-family: Muli;
-	font-size: 50px;
-	line-height: 40px;
-	font-weight: 800;
-	letter-spacing: -0.02em;
-	color: #f7ae3b;
 }
-
 .story__text {
-	font-family: Muli;
-	font-size: 18px;
-	line-height: 35px;
-	font-weight: 400;
-	color: #1e1e1e;
 }
-
 .story__link {
 }
-
 .story__content {
 }
-
 .story__image {
 }
-
 .testimonials {
-	background-color: #67311e;
 }
-
 .testimonials__inner {
 }
-
 .testimonials__title {
-	font-family: Muli;
-	font-size: 50px;
-	line-height: 40px;
-	font-weight: 800;
-	letter-spacing: -0.02em;
-	color: #f7ae3b;
 }
-
 .testimonials__title--big {
-	color: #f2612d;
-	text-transform: uppercase;
 }
-
 .testimonials__box {
 }
-
 .testimonials__quote {
-	font-family: Muli;
-	font-size: 18px;
-	line-height: 35px;
-	font-weight: 400;
-	color: #ffffff;
 }
-
 .testimonials__cite {
-	line-height: 45px;
-	font-weight: 600;
-	font-style: italic;
-	color: #f7ae3b;
 }
-
 .testimonials__img {
 }
-
 .blog {
 }
-
 .blog__wrapper {
 }
-
 .blog__text-box {
 }
-
 .blog__title {
-	font-family: Muli;
-	font-size: 50px;
-	line-height: 40px;
-	font-weight: 800;
-	letter-spacing: -0.02em;
-	color: #f7ae3b;
 }
-
 .blog__img {
 }
-
 .blog__box {
 }
-
 .blog__subtitle {
-	font-family: Muli;
-	font-size: 30px;
-	line-height: 40px;
-	font-weight: 800;
-	letter-spacing: -0.02em;
-	color: #f2612d;
 }
-
 .blog__time {
-	font-family: Muli;
-	font-size: 16px;
-	line-height: 35px;
-	font-weight: 400;
-	color: #1e1e1e;
 }
-
 .blog__excerpt {
-	font-family: Muli;
-	font-size: 18px;
-	line-height: 35px;
-	font-weight: 400;
-	color: #1e1e1e;
 }
-
 .blog__link {
-	font-weight: 800;
-	font-style: italic;
 }
-
 .instagram {
 }
-
 .instagram__title {
 }
-
 .instagram__link {
-	font-family: Muli;
-	font-size: 24px;
-	line-height: 40px;
-	font-weight: 800;
-	letter-spacing: -0.02em;
-	color: #0aa566;
 }
-
 .instagram__inner {
-	display: flex;
-	justify-content: space-between;
 }
-
 .instagram__picture {
 }
-
 .instagram__img {
 }
-
-.footer {
-}
-
 .footer__top {
-	background-color: #f5ad3d;
-	width: 100%;
 }
-
 .footer__wrapper {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
 }
-
 .footer__logo {
 }
-
 .footer__info {
 }
-
-.footer__title {
-	font-family: Muli;
-	font-size: 26px;
-	line-height: 40px;
-	font-weight: 800;
-	letter-spacing: -0.02em;
-	color: #ffffff;
-}
-
-.footer__payment {
-}
-
-.footer__box {
-}
-
-.footer__form {
-}
-
-.footer__input {
-}
-
-.footer__btn {
-	font-family: Muli;
-	font-size: 18px;
-	line-height: 40px;
-	font-weight: 800;
-	text-transform: uppercase;
-	letter-spacing: -0.02em;
-	color: #6d450c;
-}
-
-.footer__social {
-}
-
-.footer__list {
-}
-
-.footer__item {
-}
-
-.footer__link {
-}
-
-.footer__img {
-}
-
-.footer__bottom {
-	background-color: #6c2e1b;
-}
-
 .info {
 }
-
+.footer__title {
+}
 .info__list {
 }
-
 .info__item {
 }
-
 .info__link {
-	font-family: Muli;
-	font-size: 18px;
-	line-height: 35px;
-	font-weight: 700;
-	letter-spacing: -0.02em;
-	color: #6d450c;
 }
-
+.footer__payment {
+}
 .payment {
 }
-
 .payment__title {
-	font-family: Muli;
-	font-size: 26px;
-	line-height: 40px;
-	font-weight: 800;
-	letter-spacing: -0.02em;
-	color: #ffffff;
 }
-
 .payment__box {
 }
-
 .payment__img {
 }
-
+.footer__box {
+}
+.footer__form {
+}
+.footer__input {
+}
+.footer__btn {
+}
+.footer__social {
+}
+.footer__list {
+}
+.footer__item {
+}
+.footer__link {
+}
+.footer__img {
+}
+.footer__bottom {
+}
 .bottom {
 }
-
 .bottom__small {
-	font-family: Muli;
-	font-size: 13px;
-	line-height: 35px;
-	font-weight: 400;
-	letter-spacing: 0.02em;
-	color: #af8a82;
 }
-
 .bottom__link {
-	font-family: Muli;
-	font-size: 16px;
-	line-height: 40px;
-	font-weight: 700;
-	letter-spacing: -0.02em;
-	color: #ffffff;
 }
