--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,3 +1,59 @@
+@font-face {
+	font-family: Muli-Bold;
+	src: url("../fonts/Muli-Bold.ttf") format("truetype");
+	font-weight: 700;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: Muli-BoldItalic;
+	src: url("../fonts/Muli-BoldItalic") format("truetype");
+	font-weight: 700;
+	font-style: italic;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: Muli-ExtraBold;
+	src: url("../fonts/Muli-ExtraBold.woff") format("woff");
+	font-weight: 800;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: Muli-Italic;
+	src: url("../fonts/Muli-Italic.ttf") format("truetype");
+	font-weight: 400;
+	font-display: swap;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: Muli;
+	src: url("../fonts/Muli-Regular.woff") format("woff");
+	font-weight: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: Muli-Semi-BoldItalic;
+	src: url("../fonts/Muli-Semi-BoldItalic.ttf") format("truetype");
+	font-weight: 600;
+	font-style: italic;
+	font-display: swap;
+}
+
+/* Muli-Bold 
+Muli-BoldItalic
+Muli-ExtraBold
+Muli-Italic
+Muli
+Muli-Semi-BoldItalic */
+
+body {
+	font-family: Muli;
+}
+
 .header {
 	min-height: 100vh;
 	background-image: url(../images/header_bg.jpg);
@@ -22,29 +78,29 @@
 .menu__list {
 	display: flex;
 	justify-content: space-between;
-	padding-top: 15px;
 }
+
 .menu__item + .menu__item {
 	margin-left: 32px;
 }
+
 .menu__item {
 }
 
 .menu__link {
-	font-family: Muli;
+	font-family: Muli-Bold;
 	font-size: 16px;
 	line-height: 40px;
-	font-weight: 700;
 	text-transform: uppercase;
 	letter-spacing: 0.02em;
-	color: #ffffff;
+	color: #fff;
 }
 
 .logo {
 }
 
 .header__logo {
-	margin-right: 80px;
+	margin-left: 68px;
 }
 
 .logo__img {
@@ -54,6 +110,7 @@
 }
 
 .personal {
+	margin-left: 200px;
 }
 
 .personal__list {
@@ -61,9 +118,11 @@
 	justify-content: space-between;
 	align-items: center;
 }
+
 .personal__item + .personal__item {
 	margin-left: 45px;
 }
+
 .personal__item {
 }
 
@@ -83,6 +142,7 @@
 }
 
 .social {
+	margin-right: 53px;
 }
 
 .social__list {
@@ -90,9 +150,11 @@
 	justify-content: space-between;
 	align-items: center;
 }
+
 .social__item + .social__item {
-	margin-left: 10px;
+	margin-left: 30px;
 }
+
 .social__item {
 }
 
@@ -111,6 +173,30 @@
 .btn {
 }
 
+/* .enjoy-css {
+	display: inline-block;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	position: relative;
+	cursor: pointer;
+	padding: 25px 125px 25px 40px;
+	border: none;
+	-webkit-border-radius: 35px;
+	border-radius: 35px;
+	font: normal 24px/normal "Times New Roman", Times, serif;
+	color: #fff;
+	-o-text-overflow: clip;
+	text-overflow: clip;
+	background: #0aa566;
+	-webkit-box-shadow: 2px 2px 2px 0 rgba(0,0,0,0.2) ;
+	box-shadow: 2px 2px 2px 0 rgba(0,0,0,0.2) ;
+	text-shadow: -1px -1px 0 rgba(15,73,168,0.66) ;
+	-webkit-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+	-moz-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+	-o-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+	transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+ } */
 .btn--bg {
 }
 
