--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -31,7 +31,7 @@
 @font-face {
 	font-family: Muli;
 	src: url("../fonts/Muli-Regular.woff") format("woff");
-	font-weight: normal;
+	font-weight: 400;
 	font-display: swap;
 }
 
@@ -65,6 +65,7 @@ body {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	height: 100%;
 
 	padding: 65px 40px 60px 100px;
 }
@@ -100,7 +101,7 @@ body {
 }
 
 .header__logo {
-	margin-left: 68px;
+	margin-left: 75px;
 }
 
 .logo__img {
@@ -110,7 +111,7 @@ body {
 }
 
 .personal {
-	margin-left: 200px;
+	margin-left: 205px;
 }
 
 .personal__list {
@@ -123,7 +124,8 @@ body {
 	margin-left: 45px;
 }
 
-.personal__item {
+.personal__item:last-child {
+	position: relative;
 }
 
 .personal__link {
@@ -136,13 +138,35 @@ body {
 }
 
 .personal__count {
+	position: absolute;
+	height: 21px;
+	width: 21px;
+	font-family: Muli;
+	font-size: 10px;
+	line-height: 40px;
+	text-transform: uppercase;
+	letter-spacing: 0.02em;
+	color: #000;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	background-color: #fff;
+	border: radius 50%;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	-ms-border-radius: 50%;
+	-o-border-radius: 50%;
+
+	bottom: 15px;
+	left: 20px;
 }
 
 .header__social {
 }
 
 .social {
-	margin-right: 53px;
+	margin-right: 40px;
 }
 
 .social__list {
@@ -152,10 +176,23 @@ body {
 }
 
 .social__item + .social__item {
-	margin-left: 30px;
+	margin-left: 8px;
 }
 
 .social__item {
+	width: 38px;
+	height: 38px;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	background-color: #fff;
+	border-radius: 50%;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	-ms-border-radius: 50%;
+	-o-border-radius: 50%;
 }
 
 .social__link {
@@ -165,42 +202,60 @@ body {
 }
 
 .header__content {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding-top: 45px;
+	padding-left: 15px;
 }
 
 .header__btn {
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 282px;
+	height: 70px;
+	padding: 25px 125px 35px 40px;
+	border: 0 solid;
+	border-radius: 35px;
+	-webkit-border-radius: 35px;
+	-moz-border-radius: 35px;
+	-ms-border-radius: 35px;
+	-o-border-radius: 35px;
+}
+.header__btn::before {
+	content: "";
+	display: block;
+	position: absolute;
+	top: 27px;
+	left: 210px;
+	width: 30px;
+	height: 16px;
+	background-image: url("../images/arrow.png");
 }
 
 .btn {
+	font-family: Muli-ExtraBold;
+	font-size: 24px;
+	line-height: 40px;
+	letter-spacing: -0.02em;
+	color: #fff;
+	text-transform: capitalize;
 }
 
-/* .enjoy-css {
-	display: inline-block;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	position: relative;
-	cursor: pointer;
-	padding: 25px 125px 25px 40px;
-	border: none;
-	-webkit-border-radius: 35px;
-	border-radius: 35px;
-	font: normal 24px/normal "Times New Roman", Times, serif;
-	color: #fff;
-	-o-text-overflow: clip;
-	text-overflow: clip;
-	background: #0aa566;
-	-webkit-box-shadow: 2px 2px 2px 0 rgba(0,0,0,0.2) ;
-	box-shadow: 2px 2px 2px 0 rgba(0,0,0,0.2) ;
-	text-shadow: -1px -1px 0 rgba(15,73,168,0.66) ;
-	-webkit-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
-	-moz-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
-	-o-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
-	transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
- } */
 .btn--bg {
+	background-color: #0aa566;
 }
 
 .header__title {
+	font-family: Muli-Bold;
+	font-size: 50px;
+	line-height: 40px;
+	text-transform: uppercase;
+	letter-spacing: -0.02em;
+	color: #fff;
 }
 
 .title {
