--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -279,10 +279,9 @@ h3 {
 }
 
 .smoothies__title {
-	font-family: Muli;
+	font-family: Muli-ExtraBold;
 	font-size: 50px;
 	line-height: 40px;
-	font-weight: 800;
 	letter-spacing: -0.02em;
 	color: #f7ae3b;
 }
@@ -309,10 +308,9 @@ h3 {
 }
 
 .cards__desc {
-	font-family: Muli;
+	font-family: Muli-ExtraBold;
 	font-size: 25px;
 	line-height: 40px;
-	font-weight: 800;
 	letter-spacing: -0.02em;
 	color: #f2612d;
 }
@@ -356,6 +354,7 @@ h3 {
 	-ms-transform: rotate(90deg);
 	-o-transform: rotate(90deg);
 }
+
 .cards__item:nth-child(2)::after {
 	position: absolute;
 	content: "";
@@ -370,42 +369,52 @@ h3 {
 	-ms-transform: rotate(90deg);
 	-o-transform: rotate(90deg);
 }
+
 .cards__item {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 }
+
 .cards__icon {
 	padding-bottom: 15px;
 }
+
 /*
 .smoothies {}
 .title {}
-
-
  */
 /* smoothies */
 
 .about {
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 	align-items: center;
 	flex-wrap: wrap;
 	background-color: #17836f;
+	min-height: 100vh;
+	max-height: 800px;
 }
 
 .about__img {
+	padding: 0px 0px 125px 40px;
 }
 
 .about__wrapper {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+	padding: 0px 260px 550px 0px;
 }
 
 .about__title {
-	font-family: Muli;
+	width: 800px;
+	font-family: Muli-ExtraBold;
 	font-size: 55px;
 	line-height: 60px;
-	font-weight: 800;
 	letter-spacing: -0.02em;
 	color: #fff;
 }
@@ -418,12 +427,18 @@ h3 {
 }
 
 .about__list {
+	list-style-image: url(../images/li.png);
 }
 
 .about__item {
+	font-family: Muli;
+	font-size: 21px;
+	line-height: 22px;
+	color: #ffffff;
 }
 
 .about__item--bold {
+	font-family: Muli-extrabold;
 }
 
 .about__btn {
