fixed bags in css

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -482,3 +482,17 @@ h3 {
 	height: 16px;
 	background-image: url("../images/arrow.png");
 }
+.products {
+}
+.product__item {
+}
+.product {
+}
+.product__label {
+}
+.product__subtitle {
+}
+.product__button {
+}
+.btn {
+}
